--- a/templates/membership_list.html
+++ b/templates/membership_list.html
@@ -1,4 +1,7 @@
-<!DOCTYPE html>
+{% extends 'base.html' %}
+{% block content %}
+{% load static %}
+
 <html>
   <head>
     <meta charset="utf-8">
@@ -13,3 +16,4 @@
 
   </body>
 </html>
+{% endblock %}
