--- a/templates/organization_id.html
+++ b/templates/organization_id.html
@@ -1,19 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
-{% load static %}
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>{% block title %}{{ organization.name }}{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-  </head>
-  <body>
     <div class="container">
       <ol class="breadcrumb my-4">
         <li class="breadcrumb-item">Organizations</li>
-        <li class="breadcrumb-item active">{{ organization_id.name }}</li>
+        <li class="breadcrumb-item active">{{ organization.name }}</li>
       </ol>
+
+      
     </div>
-  </body>
-</html>
 {% endblock %}
