--- a/templates/home.html
+++ b/templates/home.html
@@ -1,22 +1,84 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-  <html>
-      <head>
-          <meta charset="utf-8">
-          <title>MembershipDB</title>
-          <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-      </head>
-      <body>
-          <div class="container">
 
-              <h3>Organizations</h3>
-              <h3>Memberships</h3>
-              <h3>Terms</h3>
-              <h3>Contacts</h3>
-              <h3>Notes</h3>    
-          </div>
-      </body>
-    </html>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="card mb-4 box-shadow text-center">
+                        <div class="card-header">
+                            <h4 class="my-0 font-weight-normal">Organizations</h4>
+                        </div>
+                        <div class="card-body">
+                            <h1 class="card-title pricing-card-title">20 organizations</h1>
+                            <ul class="list-unstyled mt-3 mb-4">
+                            <li>10 users included</li>
+                            </ul>
+                            <button type="button" class="btn btn-outline-primary">Go</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card mb-4 box-shadow text-center">
+                        <div class="card-header">
+                            <h4 class="my-0 font-weight-normal">Memberships</h4>
+                        </div>
+                        <div class="card-body">
+                            <h1 class="card-title pricing-card-title">15 memberships</h1>
+                            <ul class="list-unstyled mt-3 mb-4">
+                            <li>20 users included</li>
+                            </ul>
+                            <button type="button" class="btn btn-outline-primary">Go</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card mb-4 box-shadow text-center">
+                        <div class="card-header">
+                            <h4 class="my-0 font-weight-normal">Contacts</h4>
+                        </div>
+                        <div class="card-body">
+                            <h1 class="card-title pricing-card-title">29 contacts</h1>
+                            <ul class="list-unstyled mt-3 mb-4">
+                            <li>30 users included</li>
+                            </ul>
+                            <button type="button" class="btn btn-outline-primary">Go</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-4">
+                    <div class="card mb-4 box-shadow text-center">
+                        <div class="card-header">
+                            <h4 class="my-0 font-weight-normal">Terms</h4>
+                        </div>
+                        <div class="card-body">
+                            <h1 class="card-title pricing-card-title">29 terms</h1>
+                            <ul class="list-unstyled mt-3 mb-4">
+                            <li>30 users included</li>
+                            </ul>
+                            <button type="button" class="btn btn-outline-primary">Go</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card mb-4 box-shadow text-center">
+                        <div class="card-header">
+                            <h4 class="my-0 font-weight-normal">Notes</h4>
+                            </div>
+                        <div class="card-body">
+                            <h1 class="card-title pricing-card-title">29 notes</h1>
+                            <ul class="list-unstyled mt-3 mb-4">
+                            <li>30 users included</li>
+                            </ul>
+                            <button type="button" class="btn btn-outline-primary">Go</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+</div> 
 
 {% endblock %}
