New view templates are enhanced and added: notes, terms.

--- a/templates/base.html
+++ b/templates/base.html
@@ -40,15 +40,7 @@
       {% endblock %}
     </div>
     <hr class="footer-hr" />
-    <div class="container{% block fluid-footer %}{% endblock %}">
-      <div class="row">
-        <div class="col-sm-12 footer">
-          <p>
-            Footer
-          </p>
-        </div>
-      </div>
-    </div>
+    <div class="container">
     <footer class="pt-4 my-md-5 pt-md-5 border-top">
         <div class="row">
           <div class="col-12 col-md">
@@ -86,6 +78,7 @@
           </div>
         </div>
       </footer>
+    </div>
   </body>
 </html>
 
