--- a/templates/home.html
+++ b/templates/home.html
@@ -7,42 +7,44 @@
                 <div class="col">
                     <div class="card mb-4 box-shadow text-center">
                         <div class="card-header">
-                            <h4 class="my-0 font-weight-normal">Organizations</h4>
+                            <h4 class="my-0 font-weight-normal">ORGANIZATIONS</h4>
                         </div>
                         <div class="card-body">
-                            <h1 class="card-title pricing-card-title">20 organizations</h1>
+                            <h1 class="card-title pricing-card-title">20 organi</h1>
                             <ul class="list-unstyled mt-3 mb-4">
                             <li>10 users included</li>
                             </ul>
-                            <button type="button" class="btn btn-outline-primary">Go</button>
+                            <button type="button" class="btn btn-outline-primary" onclick="location.href='{% url 'organization_list' %}'">Go         
+                            </button>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card mb-4 box-shadow text-center">
                         <div class="card-header">
-                            <h4 class="my-0 font-weight-normal">Memberships</h4>
+                            <h4 class="my-0 font-weight-normal">MEMBERSHIPS</h4>
                         </div>
                         <div class="card-body">
-                            <h1 class="card-title pricing-card-title">15 memberships</h1>
+                            <h1 class="card-title pricing-card-title">15 members</h1>
                             <ul class="list-unstyled mt-3 mb-4">
                             <li>20 users included</li>
                             </ul>
-                            <button type="button" class="btn btn-outline-primary">Go</button>
+                            <button type="button" class="btn btn-outline-primary" onclick="location.href='{% url 'membership_list' %}'">Go
+                            </button>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card mb-4 box-shadow text-center">
                         <div class="card-header">
-                            <h4 class="my-0 font-weight-normal">Contacts</h4>
+                            <h4 class="my-0 font-weight-normal">CONTACTS</h4>
                         </div>
                         <div class="card-body">
                             <h1 class="card-title pricing-card-title">29 contacts</h1>
                             <ul class="list-unstyled mt-3 mb-4">
                             <li>30 users included</li>
                             </ul>
-                            <button type="button" class="btn btn-outline-primary">Go</button>
+                            <button type="button" class="btn btn-outline-primary" onclick="location.href='{% url 'contact_list' %}'">Go</button>
                         </div>
                     </div>
                 </div>
@@ -51,28 +53,28 @@
                 <div class="col-4">
                     <div class="card mb-4 box-shadow text-center">
                         <div class="card-header">
-                            <h4 class="my-0 font-weight-normal">Terms</h4>
+                            <h4 class="my-0 font-weight-normal">TERMS</h4>
                         </div>
                         <div class="card-body">
                             <h1 class="card-title pricing-card-title">29 terms</h1>
                             <ul class="list-unstyled mt-3 mb-4">
                             <li>30 users included</li>
                             </ul>
-                            <button type="button" class="btn btn-outline-primary">Go</button>
+                            <button type="button" class="btn btn-outline-primary" onclick="location.href='{% url 'term_list' %}'">Go</button>
                         </div>
                     </div>
                 </div>
                 <div class="col-4">
                     <div class="card mb-4 box-shadow text-center">
                         <div class="card-header">
-                            <h4 class="my-0 font-weight-normal">Notes</h4>
+                            <h4 class="my-0 font-weight-normal">NOTES</h4>
                             </div>
                         <div class="card-body">
                             <h1 class="card-title pricing-card-title">29 notes</h1>
                             <ul class="list-unstyled mt-3 mb-4">
                             <li>30 users included</li>
                             </ul>
-                            <button type="button" class="btn btn-outline-primary">Go</button>
+                            <button type="button" class="btn btn-outline-primary" onclick="location.href='{% url 'note_list' %}'">Go</button>
                         </div>
                     </div>
                 </div>
