--- a/templates/base.html
+++ b/templates/base.html
@@ -32,10 +32,10 @@
 
 
     <div class="container">
-<!--      <ol class="breadcrumb my-4">
+      <ol class="breadcrumb my-4">
         {% block breadcrumb %}
         {% endblock %}
-      </ol> -->
+      </ol> 
       {% block content %}
       {% endblock %}
     </div>
