--- a/templates/contact_list.html
+++ b/templates/contact_list.html
@@ -1,24 +1,23 @@
 {% extends 'base.html' %}
-{% block content %}
-{% load static %}
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Contacts</title>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-  </head>
-  <body>
-  <div class="container">
-      <ol class="breadcrumb my-4">
-        <h1 class="breadcrumb-item active">Contacts</h1>
-      </ol>
 
+{% load static %}
+
+{% block title %}Contacts{% endblock %}
+
+{% block breadcrumb %}
+  <ol class="breadcrumb my-1">
+    <h1 class="breadcrumb-item active">Contacts</h1>
+  </ol>
+{% endblock %}
+
+{% block content %}
+  <div class="container">
     <table class="table">
       <thead class="thead-dark">
         <tr>
-          <th>Organization</th>
           <th>Name</th>
           <th>Lastname</th>
+          <th>Organization</th>
           <th>Title</th>
           <th style="text-align:center;">Primary Contact</th>
         </tr>
@@ -27,9 +26,13 @@
         <p>
         {% for contact in contacts %}
           <tr>
-            <td>{{ contact.organization }}</td>
-            <td>{{ contact.name }}</td>
-            <td>{{ contact.last_name }}</td>
+            <td>
+                <a href="{% url 'contact_id' contact.id %}">{{ contact.name }}</a>
+            </td>
+            <td>
+                <a href="{% url 'contact_id' contact.id %}">{{ contact.last_name }}</a>
+            </td>
+            <td>{{ contact.organization }}</td>           
             <td>{{ contact.title }}</td>
             <td style="text-align:center;"><div class="form-check">
                 <input type="checkbox" class="form-check-input center" id="contactPrimary" {% if contact.member_contact %}checked="checked"{% endif %}> 
@@ -40,7 +43,4 @@
       </tbody>
     </table>
   </div>
-  </body>
-</html>
-
 {% endblock %}
