--- a/templates/membership_list.html
+++ b/templates/membership_list.html
@@ -1,18 +1,16 @@
 {% extends 'base.html' %}
-{% block content %}
 {% load static %}
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Memberships</title>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-  </head>
-  <body>
-  <div class="container">
-      <ol class="breadcrumb my-4">
-        <h1 class="breadcrumb-item active">Memberships</h1>
-      </ol>
 
+{% block title %}Memberships{% endblock %}
+
+{% block breadcrumb %}   
+<ol class="breadcrumb my-1">
+    <h1 class="breadcrumb-item active">Memberships</h1>
+  </ol>
+{% endblock %}
+
+{% block content %}
+    <div class="container">
     <table class="table">
       <thead class="thead-dark">
         <tr>
@@ -26,7 +24,7 @@
         {% for membership in memberships %}
           <tr>
             <td>
-              {{ membership.organization }}
+              <a href="{% url 'membership_id' membership.id %}">{{ membership.organization }}</a>
             </td>
             <td><small class="text-muted d-block">{{ membership.member_type }}</small></td> 
             <td><small class="text-muted d-block">{{ membership.status }}</small></td> 
@@ -36,7 +34,5 @@
       </tbody>
     </table>
   </div>
-  </body>
-</html>
 
 {% endblock %}
