--- a/templates/note_list.html
+++ b/templates/note_list.html
@@ -1,18 +1,16 @@
 {% extends 'base.html' %}
-{% block content %}
 {% load static %}
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Notes</title>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-  </head>
-  <body>
-  <div class="container">
-      <ol class="breadcrumb my-4">
+
+{% block title %}Notes{% endblock %}
+
+{% block breadcrumb %}
+      <ol class="breadcrumb my-1">
         <h1 class="breadcrumb-item active">Notes</h1>
       </ol>
+{% endblock %}
 
+{% block content %}
+<div class="container">
     <table class="table">
       <thead class="thead-dark">
         <tr>
@@ -25,7 +23,9 @@
         <p>
         {% for note in notes %}
           <tr>
-            <td>{{ note.title }}</td>
+            <td>
+                <a href="{% url 'note_id' note.id %}">{{ note.title }}</a>
+            </td>
             <td>{{ note.content|slice:"50" }}{% if note.content|length > 50 %}...{% endif %}</td>
             <td>{{ note.date_time }}</td>
           </tr>
@@ -34,7 +34,4 @@
       </tbody>
     </table>
   </div>
-  </body>
-</html>
-
 {% endblock %}
