--- a/templates/organization_id.html
+++ b/templates/organization_id.html
@@ -6,10 +6,37 @@
 {% endblock %}
 
 {% block content %}
-  <div class="container">
-    <ol class="breadcrumb my-5">
-      <li class="breadcrumb-item">Organization</li>
-      <li class="breadcrumb-item active">{{ organization.name }}</li>
-    </ol>
+<div class="container">
+  <div class="row">
+      <div class="col-6">Name: {{ organization.name }}</div>
+      <div class="col-6">Shortname: {{ organization.shortname }}</div>
   </div>
+  <div class="row">
+      <div class="col-6">Country: {{ organization.country.name }}</div>
+      <div class="col-6">Umbrella members: {{ organization.members }}</div>
+  </div>
+  <div class="row">
+    <div class="col-12">URL: {{ organization.domain }}</div>
+  </div>
+  <br>
+  <div class="row">
+    <div class="col-6">
+      <label class="col-sm-2 col-form-label">Is umbrella?</label>
+    <div class="form-check">
+      <input type="checkbox" class="form-check-input" id="organizationUmbrella" {% if organization.umbrella %}checked="checked"{% endif %}> 
+    </div>
+    </div>
+    <div class="col-6">
+        <label class="col-sm-2 col-form-label">Registered vendor?</label>
+      <div class="form-check">
+        <input type="checkbox" class="form-check-input" id="organizationVendor" {% if organization.vendor_reg %}checked="checked"{% endif %}> 
+      </div>
+      </div>
+  </div>
+  <div class="row">
+      <div class="col-12">Notes: {{ organization.notes.content_type.organization }}</div>
+    </div>
+
+</div>
+
 {% endblock %}
