--- a/templates/term_list.html
+++ b/templates/term_list.html
@@ -1,44 +1,34 @@
 {% extends 'base.html' %}
-{% block content %}
 {% load static %}
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Terms</title>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-  </head>
-  <body>
-  <div class="container">
-      <ol class="breadcrumb my-4">
+
+{% block title %}Terms{% endblock %}
+
+{% block breadcrumb %}
+      <ol class="breadcrumb my-1">
         <h1 class="breadcrumb-item active">Terms</h1>
       </ol>
+{% endblock %}
 
+{% block content %}
+  <div class="container">
     <table class="table">
       <thead class="thead-dark">
         <tr>
           <th>Membership Type</th>
-          <th># Workshops</th>
-          <th># Instructors</th>
-          <th style="text-align:center;">Inhouse Trainer</th>
         </tr>
       </thead>
       <tbody>
         <p>
         {% for term in terms %}
           <tr>
-            <td>{{ term.mem_type }}</td>
-            <td>{{ term.n_workshopse }}</td>
-            <td>{{ term.n_instructors }}</td>
-            <td style="text-align:center;"><div class="form-check">
-                <input type="checkbox" class="form-check-input center" id="inhouseTrainer" {% if term.inh_trainer %}checked="checked"{% endif %}> 
-            </div></td>
+            <td>
+                <a href="{% url 'term_id' term.id %}">{{ term.mem_type }}</a>
+            </td>
           </tr>
         {% endfor %}
         </p>
       </tbody>
     </table>
   </div>
-  </body>
-</html>
 
 {% endblock %}
