Edit and Add new buttons includen in terms list and id views

--- a/templates/term_id.html
+++ b/templates/term_id.html
@@ -8,6 +8,12 @@
 
 {% block content %}
 <div class="container">
+    <div class="row float-right">
+        <div class="btn btn-outline-primary" href="#">Edit</div>
+        <div class="btn btn-outline-primary" href="#">Delete</div>
+    </div>
+    <br>
+    <br>
   <div class="row">
       <div class="col-4">Type of membership: {{ term.mem_type }}</div>
       <div class="col-4">Number of workshops: {{ term.n_workshops }}</div>
