--- a/templates/contact_id.html
+++ b/templates/contact_id.html
@@ -8,6 +8,12 @@
 
 {% block content %}
 <div class="container">
+    <div class="row float-right">
+        <div class="btn btn-outline-primary" href="#">Edit</div>
+        <div class="btn btn-outline-primary" href="#">Delete</div>
+    </div>
+    <br>
+    <br>
   <div class="row">
       <div class="col-6">Name: {{ contact.name }}</div>
       <div class="col-6">Lastname: {{ contact.last_name }}</div>
