--- a/templates/contact_list.html
+++ b/templates/contact_list.html
@@ -12,6 +12,9 @@
 
 {% block content %}
   <div class="container">
+      <div class="btn btn-outline-primary" href="#">Add new</div>
+      <br>
+      <br>
     <table class="table">
       <thead class="thead-dark">
         <tr>
