Add new button included in membership list view

--- a/templates/membership_list.html
+++ b/templates/membership_list.html
@@ -11,6 +11,9 @@
 
 {% block content %}
     <div class="container">
+        <div class="btn btn-outline-primary" href="#">Add new</div>
+        <br>
+        <br>
     <table class="table">
       <thead class="thead-dark">
         <tr>
