Emty module cards in home page

--- a/templates/home.html
+++ b/templates/home.html
@@ -10,9 +10,9 @@
                             <h4 class="my-0 font-weight-normal">ORGANIZATIONS</h4>
                         </div>
                         <div class="card-body">
-                            <h1 class="card-title pricing-card-title">20 organi</h1>
+                            <h1 class="card-title pricing-card-title"></h1>
                             <ul class="list-unstyled mt-3 mb-4">
-                            <li>10 users included</li>
+                            <li></li>
                             </ul>
                             <button type="button" class="btn btn-outline-primary" onclick="location.href='{% url 'organization_list' %}'">Go         
                             </button>
@@ -25,9 +25,9 @@
                             <h4 class="my-0 font-weight-normal">MEMBERSHIPS</h4>
                         </div>
                         <div class="card-body">
-                            <h1 class="card-title pricing-card-title">15 members</h1>
+                            <h1 class="card-title pricing-card-title"></h1>
                             <ul class="list-unstyled mt-3 mb-4">
-                            <li>20 users included</li>
+                            <li></li>
                             </ul>
                             <button type="button" class="btn btn-outline-primary" onclick="location.href='{% url 'membership_list' %}'">Go
                             </button>
@@ -40,9 +40,9 @@
                             <h4 class="my-0 font-weight-normal">CONTACTS</h4>
                         </div>
                         <div class="card-body">
-                            <h1 class="card-title pricing-card-title">29 contacts</h1>
+                            <h1 class="card-title pricing-card-title"></h1>
                             <ul class="list-unstyled mt-3 mb-4">
-                            <li>30 users included</li>
+                            <li></li>
                             </ul>
                             <button type="button" class="btn btn-outline-primary" onclick="location.href='{% url 'contact_list' %}'">Go</button>
                         </div>
@@ -56,9 +56,9 @@
                             <h4 class="my-0 font-weight-normal">TERMS</h4>
                         </div>
                         <div class="card-body">
-                            <h1 class="card-title pricing-card-title">29 terms</h1>
+                            <h1 class="card-title pricing-card-title"></h1>
                             <ul class="list-unstyled mt-3 mb-4">
-                            <li>30 users included</li>
+                            <li></li>
                             </ul>
                             <button type="button" class="btn btn-outline-primary" onclick="location.href='{% url 'term_list' %}'">Go</button>
                         </div>
@@ -70,9 +70,9 @@
                             <h4 class="my-0 font-weight-normal">NOTES</h4>
                             </div>
                         <div class="card-body">
-                            <h1 class="card-title pricing-card-title">29 notes</h1>
+                            <h1 class="card-title pricing-card-title"></h1>
                             <ul class="list-unstyled mt-3 mb-4">
-                            <li>30 users included</li>
+                            <li></li>
                             </ul>
                             <button type="button" class="btn btn-outline-primary" onclick="location.href='{% url 'note_list' %}'">Go</button>
                         </div>
