--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
       <title>{% block title %}MembershipDB{% endblock %}</title>
   
       <!-- Bootstrap core CSS -->
-      <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+      <link href="{% static 'bootstrap/dist/css/bootstrap.min.css' %}" rel="stylesheet">
   
       <!-- Custom styles for this template -->
       <link href="membership.css" rel="stylesheet">
