Add instance reference to edit button to avoid 'NoReverseMatchError'

--- a/templates/membership_id.html
+++ b/templates/membership_id.html
@@ -10,7 +10,7 @@
 {% block content %}
 <div class="container">
   <div class="row float-right">
-      <div class="btn btn-outline-primary" href="{% url 'membership_edit' %}}">Edit</div>
+      <div class="btn btn-outline-primary" href="{% url 'membership_edit' membership.id %}}">Edit</div>
       <div class="btn btn-outline-primary" href="#">Delete</div>
   </div>
 <br>
