New distribution of home template

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,21 @@
 {% extends 'base.html' %}
 {% load static %}
+
+<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-dark border-bottom box-shadow">
+    <h5 class="my-0 mr-md-auto font-weight-normal text-light">
+      <a class="text-light" href="{% url 'home' %}">The Carpentries Memberships</a>
+    </h5>
+    <nav class="my-2 my-md-0 mr-md-3">
+      <a class="p-2 text-light" href="#">Features</a>
+    </nav>
+    <a class="btn btn-outline-primary" href="#">Sign up</a>
+  </div>
+
+  <div class="jumbotron text-center">
+      <h1>MembershipDB</h1>
+      <p>Information about the page.</p>
+  </div>
+
 {% block content %}
 
         <div class="container">
@@ -14,7 +30,9 @@
                             <ul class="list-unstyled mt-3 mb-4">
                             <li></li>
                             </ul>
-                            <button type="button" class="btn btn-outline-primary" onclick="location.href='{% url 'organization_list' %}'">Go         
+                            <button type="button" class="btn btn-outline-primary" onclick="location.href='{% url 'organization_list' %}'">List       
+                            </button> <br><br>
+                            <button type="button" class="btn btn-outline-primary" onclick="location.href='{% url 'organization_list' %}'">New        
                             </button>
                         </div>
                     </div>
