Home breadcrumb added

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,20 +1,12 @@
-{% extends 'base.html' %}
+{% extends 'base_banner.html' %}
 {% load static %}
 
-<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-dark border-bottom box-shadow">
-    <h5 class="my-0 mr-md-auto font-weight-normal text-light">
-      <a class="text-light" href="{% url 'home' %}">The Carpentries Memberships</a>
-    </h5>
-    <nav class="my-2 my-md-0 mr-md-3">
-      <a class="p-2 text-light" href="#">Features</a>
-    </nav>
-    <a class="btn btn-outline-primary" href="#">Sign up</a>
-  </div>
 
-  <div class="jumbotron text-center">
-      <h1>MembershipDB</h1>
-      <p>Information about the page.</p>
-  </div>
+{% block breadcrumb %}
+  <ol class="breadcrumb my-1">
+    <h1 class="breadcrumb-item active">Home</h1>
+  </ol>
+{% endblock %}
 
 {% block content %}
 
