--- a/templates/base.html
+++ b/templates/base.html
@@ -16,15 +16,12 @@
 
     {% block top %}
     {% endblock %}
-    <div class="jumbotron text-center">
-        <h1>MembershipDB</h1>
-    </div>
-    <div class="text-center">
-        <img src="~/carpentries-mdb-hex-white.png" >
-    </div>
 
     <div class="container">
-      <ol class="breadcrumb my-4">
+      <ol class="breadcrumb my-4"> 
+        <div>
+            <img src="/static/carpentries-mdb-hex-white.png" height="100px">
+        </div>
         {% block breadcrumb %}
         {% endblock %}
       </ol> 
