--- a/templates/organization_id.html
+++ b/templates/organization_id.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_banner.html' %}
 
 {% block breadcrumb %}
   <li class="breadcrumb-item"><a href="{% url 'organization_list' %}">Organization</a></li>
