--- a/templates/membership_id.html
+++ b/templates/membership_id.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_banner.html' %}
 
 {% block breadcrumb %}
 
@@ -10,7 +10,7 @@
 {% block content %}
 <div class="container">
   <div class="row float-right">
-      <div class="btn btn-outline-primary" href="{% url 'membership_edit' membership.id %}">Edit</div>
+      <div class="btn btn-outline-primary" onclick="location.href='{% url 'membership_edit' membership.id %}'">Edit</div>
       <div class="btn btn-outline-primary" href="#">Delete</div>
   </div>
 <br>
