--- a/templates/term_id.html
+++ b/templates/term_id.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_banner.html' %}
 
 {% block breadcrumb %}
   <li class="breadcrumb-item"><a href="{% url 'term_list' %}">Term</a></li>
